addon/styles/_pix-select.scss
.pix-select {
  display: inline-block;
  position: relative;

  &__label {
    @include label();
  }

  &__sub-label {
    @include subLabel();
  }

  &__dropdown {
    z-index: 200;
    position: absolute;
    border-top: none;
    border-radius: 0 0 4px 4px;
    overflow-y: auto;
    max-height: 200px;
    width: inherit;
    list-style-type: none;
    padding: 0;
    background-color: $pix-neutral-0;
    box-shadow: 0px 6px 12px rgba(7, 20, 46, 0.08);
    transition: all 0.1s ease-in-out;
    white-space: nowrap;
    margin-top: $spacing-xxs;

    &::-webkit-scrollbar {
      width: 0.5rem;
    }
    &::-webkit-scrollbar-track {
      border-radius: 4px;
      border: 1px solid $pix-neutral-20;
      background: $pix-neutral-20;
    }
    &::-webkit-scrollbar-thumb {
      border-radius: 4px;
      width: 0.375rem;
      background: $pix-neutral-30;
    }
    &::-webkit-scrollbar-thumb:hover {
      background: $pix-neutral-35;
    }

    &--closed {
      visibility: hidden;
      opacity: 0;
    }
  }

  &__empty-search-message {
    @include text-small();
    color: $pix-neutral-70;
    text-align: center;
  }

  &__search {
    display: flex;
    border-bottom: 2px solid $pix-neutral-22;
    margin: $spacing-s $spacing-m;
    color: $pix-neutral-30;
    border-radius: 4px 4px 0 0;

    &:focus-within {
      background: $pix-neutral-10;
      border-bottom: 2px solid $pix-primary;
    }
  }

  &__options {
    border-top: 1px solid $pix-neutral-20;
  }

  &__error-message {
    @include errorMessage();
  }
}

.pix-select-button {
  display: flex;
  flex-direction: row;
  align-items: center;
  font-family: $font-roboto;
  font-weight: $font-normal;
  position: relative;
  border: 1px $pix-neutral-45 solid;
  padding: 0px $spacing-s 0px $spacing-s;
  width: 100%;
  background-color: $pix-neutral-0;
  border-radius: 4px;
  outline: none;
  height: 2.25rem;
  cursor: pointer;
  color: $pix-neutral-90;
  justify-content: space-between;

  @include text-small();
  @include hoverFormElement();
  @include focusWithinFormElement();

  &--disabled {
    @include formElementDisabled();
    @include hoverFormElementDisabled();
  }

  &--error {
    @include formElementInError();
  }

  &__dropdown-icon {
    @include text-small();
    margin-left: $spacing-xs;
    color: $pix-neutral-60;
    font-weight: $font-heavy;
    pointer-events: none;
  }
}

.pix-select-options__category {
  list-style: none;
  padding: 0;
  margin: 0;
}

.pix-select-options-category {
  &__name {
    @include text-small();
    padding: $spacing-s $spacing-m $spacing-xs $spacing-m;
    text-transform: uppercase;
    font-family: $font-roboto;
    color: $pix-neutral-45;
  }

  &__option {
    @include text-small();
    display: flex;
    justify-content: space-between;
    padding: $spacing-xs $spacing-m;
    color: $pix-neutral-70;

    &:hover,
    &:focus {
      outline: none;
      cursor: pointer;
      background-color: $pix-neutral-10;
    }

    svg {
      visibility: hidden;
      opacity: 0;
      font-size: 1.125rem;
    }

    &--selected {
      background-color: $pix-primary-5;
      align-items: center;

      svg {
        visibility: visible;
        opacity: 1;
      }
    }

    &--hidden {
      visibility: hidden;
      height: 0;
      padding-top: 0;
      padding-bottom: 0;
    }
  }
}

.pix-select-search {
  &__input {
    @include text-small();
    width: 100%;
    border: none;
    padding-left: $spacing-xs;
    margin: $spacing-xxs;
    &:focus {
      outline: none;
      background: $pix-neutral-10;
    }
  }

  &__icon {
    margin: auto $spacing-xxs;
  }
}

